<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.DetailActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_detail_poster"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_gravity=""
        android:contentDescription="@string/banner_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
        app:shapeAppearanceOverlay="@style/poster_detail" />

    <ToggleButton
        android:id="@+id/favorite_detail"
        android:layout_width="@dimen/medium"
        android:layout_height="@dimen/medium"
        android:layout_marginEnd="@dimen/large"
        android:background="@drawable/button_favorite"
        android:checked="false"
        android:text=""
        android:textOff=""
        android:textOn=""
        android:layout_marginLeft="@dimen/xsmall"
        android:layout_marginTop="@dimen/xsmall"
        app:layout_constraintBottom_toBottomOf="@+id/txt_movie_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_movie_title" />


    <TextView
        android:id="@+id/txt_movie_title"
        style="@style/Detail_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_detail_poster"
        tools:text="Ford vs Ferrari" />

    <TextView
        android:id="@+id/txt_movie_year"
        style="@style/Info_movie_details_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large"
        android:layout_marginTop="@dimen/small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_movie_title"
        tools:text="2019" />

    <TextView
        android:id="@+id/txt_parental_Guidance"
        style="@style/Info_movie_details_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        app:layout_constraintStart_toEndOf="@+id/txt_movie_year"
        app:layout_constraintTop_toTopOf="@+id/txt_movie_year"
        tools:text="PG-13" />

    <TextView
        android:id="@+id/txt_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        app:layout_constraintStart_toEndOf="@+id/txt_parental_Guidance"
        app:layout_constraintTop_toTopOf="@+id/txt_parental_Guidance"
        tools:text="2h 32min" />


    <TextView
        android:id="@+id/txt_sinopsys"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:layout_marginEnd="@dimen/large"
        app:layout_constraintTop_toBottomOf="@+id/txt_sinopsys_title"
        app:layout_constraintLeft_toLeftOf="@+id/txt_sinopsys_title"
        tools:text="O projetista Carroll Shelby e o piloto Ken Miles enfrentaram a interferência empresarial, as leis da física e os próprios demônios para construir um carro de corrida para a Ford Motor derrotar a hegemonia de Enzo Ferrari nas 24 horas de Le Mans" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/actor_list"
        android:layout_width="378dp"
        android:layout_height="103dp"
        android:layout_marginTop="@dimen/small"
        android:layout_marginEnd="@dimen/large"
        android:layout_marginBottom="@dimen/small"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/txt_sinopsys"
        app:layout_constraintLeft_toLeftOf="@+id/txt_sinopsys"/>

    <TextView
        android:id="@+id/txt_sinopsys_title"
        style="@style/synopsis_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xlarge"
        android:text="@string/synopsis"
        app:layout_constraintStart_toStartOf="@+id/txt_movie_year"
        app:layout_constraintTop_toBottomOf="@+id/genres_movie" />

    <ImageButton
        android:id="@+id/btn_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large"
        android:layout_marginTop="@dimen/large"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/return_home"
        android:src="@drawable/ic_return"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="160dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toTopOf="@id/favorite_detail"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:cardElevation="16dp" />
    </FrameLayout>

    <TextView
        android:id="@+id/txt_users_rating"
        style="@style/RatingText"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small"
        android:layout_marginBottom="@dimen/xxlarge"
        android:text="@string/users_review_txt"
        app:layout_constraintBottom_toTopOf="@id/favorite_detail"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txt_number_percent"
        style="@style/Percent_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/txt_users_rating"
        app:layout_constraintStart_toStartOf="@+id/txt_users_rating"
        tools:text="81%" />

    <ImageView
        android:id="@+id/img_label_star"
        android:layout_width="@dimen/medium"
        android:layout_height="@dimen/medium"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/movie_rate"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="@+id/txt_users_rating"
        app:layout_constraintEnd_toStartOf="@+id/txt_users_rating"
        app:layout_constraintTop_toTopOf="@+id/txt_number_percent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/genres_movie"
        android:layout_width="187dp"
        android:layout_height="@dimen/xlarge"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/txt_movie_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_parental_Guidance" />

    <TextView
        android:id="@+id/txt_actor"
        style="@style/synopsis_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:text="@string/cast"
        app:layout_constraintStart_toStartOf="@+id/txt_sinopsys"
        app:layout_constraintTop_toBottomOf="@+id/txt_sinopsys" />


</androidx.constraintlayout.widget.ConstraintLayout>