<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".presentation.MainActivity">

    <ImageButton
        android:id="@+id/image_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large"
        android:layout_marginVertical="@dimen/small"
        android:backgroundTint="@color/backgroundColor"
        android:src="@drawable/ic_search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="16"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/movie_search"
        android:inputType="text"
        android:textSize="@dimen/small_sp"
        app:layout_constraintLeft_toRightOf="@+id/image_search"
        app:layout_constraintTop_toTopOf="@+id/image_search" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/custom_tab_text_layout"
        android:visibility="visible"
        android:fontFamily="@font/lato_regular"
        app:tabIndicator="@drawable/ic_rectangle_3"
        app:tabIndicatorColor="@color/primary_green"
        app:tabIndicatorFullWidth="false"
        app:tabSelectedTextColor="#223334"
        app:tabTextColor="#223334"
        app:layout_constraintTop_toTopOf="@+id/search"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        tools:layout_editor_absoluteX="0dp" />
    <ImageView
        android:id="@+id/image_retangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_rectangle_3"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/small"
        app:layout_constraintTop_toBottomOf="@id/search"
        app:layout_constraintLeft_toLeftOf="@id/image_search"/>
    <TextView
        android:id="@+id/search_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_mode"
        android:fontFamily="@font/lato_regular"
        android:textSize="@dimen/large"
        android:visibility="invisible"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/xxsmall"
        app:layout_constraintTop_toBottomOf="@+id/image_retangle"
        app:layout_constraintLeft_toLeftOf="@id/image_retangle"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:visibility="invisible"
        android:layout_marginLeft="@dimen/xxsmall"
        android:textColor="@color/primary_green"
        app:layout_constraintTop_toBottomOf="@id/search_mode"
        app:layout_constraintLeft_toLeftOf="@id/search_mode"/>
</androidx.constraintlayout.widget.ConstraintLayout>